add owner service

--- a/src/app/features/survey/components/survey-item/survey-item.component.html
+++ b/src/app/features/survey/components/survey-item/survey-item.component.html
@@ -1,1 +1,6 @@
-<p>survey-item works!</p>
+<!-- survey-item.component.html -->
+<div class="survey-card bg-red-500 p-6 rounded-lg shadow-lg hover:-translate-y-1 hover:shadow-2xl transition">
+    <h2 class="text-xl font-bold text-gray-800 mb-2">{{ survey?.title }}</h2>
+    <p class="text-gray-600">{{ survey?.description }}</p>
+  </div>
+  
