--- a/src/app/features/survey/components/survey-list/survey-list.component.html
+++ b/src/app/features/survey/components/survey-list/survey-list.component.html
@@ -1,1 +1,9 @@
-<p>survey-list works!</p>
+<div class="container mx-auto p-4">
+    <h2 class="text-2xl font-bold mb-6">Surveys List</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      @for (survey of surveys; track survey.id) {
+        <app-survey-item [survey]="survey"></app-survey-item>
+      }
+    </div>
+  </div>
+  
