fixe some issues in participate logic

--- a/src/app/features/survey/components/survey-editions-item/survey-editions-item.component.html
+++ b/src/app/features/survey/components/survey-editions-item/survey-editions-item.component.html
@@ -1,7 +1,7 @@
 <!-- filepath: /c:/Users/safiy/Desktop/ITlens-frontend/src/app/features/survey/components/survey-editions-item/survey-editions-item.component.html -->
  
 <div class="survey-tree bg-white p-6 rounded-lg shadow-lg border border-gray-200">
-    <h2 class="text-2xl font-bold text-gray-800 mb-4">Survey Edition: {{ edition?.year }}</h2>
+    <h2 class="text-2xl font-bold text-gray-800 mb-4">Survey h: {{ edition?.year }}</h2>
     <div class="content-container flex">
         <div class="subject-container w-1/2 pr-4">
             <ul class="tree-root list-none pl-0">
@@ -62,3 +62,5 @@
         </div>
     </div>
 </div>
+
+
