--- a/src/app/features/survey/components/survey-item/survey-item.component.html
+++ b/src/app/features/survey/components/survey-item/survey-item.component.html
@@ -1,4 +1,4 @@
-<div class="survey-card bg-white p-6 rounded-lg shadow-lg hover:shadow-2xl transition border border-gray-200 relative">
+<div class="survey-card bg-white p-6 rounded-lg shadow-lg hover:shadow-2xl transition border border-gray-200 relative w-[400px] h-[250px]">
     <button class="delete-button absolute top-2 right-2" (click)="deleteSurvey(survey.id)">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
             <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
@@ -13,11 +13,77 @@
     <p class="text-gray-600">{{ survey?.description }}</p>
     <div class="mt-4">
         <ng-container *ngFor="let edition of survey?.surveyEditions">
-            <button class="bg-blue-500 text-white px-4 py-2 rounded mb-2" (click)="goToEdition(edition.id)">
+            <button class="bg-blue-500 text-white px-4 py-2 rounded mb-2 m-2" (click)="goToEdition(edition.id)">
                 {{ edition.year }}
             </button>
         </ng-container>
+        <button class="update-button absolute top-2 right-16" (click)="openAddEditionPopup()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M12 4.5v15m7.5-7.5h-15" />
+              </svg>
+              
+        </button>
+        
+        
     </div>
 
     
 </div>
+
+<div [ngClass]="isVisibleUpdateSurveyPopup() ? 'block' : 'hidden'" class="popup bg-black fixed inset-0 bg-gray-800 bg-opacity-75 flex justify-center items-center z-50">
+    <div class="popup-content bg-white p-8 rounded-lg shadow-lg max-w-md w-full relative">
+        <button class="absolute top-2 right-2 text-gray-600 hover:text-gray-900" (click)="closeModal()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+            </svg>
+        </button>
+        <h2 class="text-2xl font-bold mb-4">Update Survey {{survey.title}}</h2>
+        <form (ngSubmit)="updateSurvey(survey.id)">
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="title">Title</label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="title" type="text" [(ngModel)]="survey.title" name="title" required>
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="description">Description</label>
+                <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="description" [(ngModel)]="survey.description" name="description" required></textarea>
+            </div>
+            <div class="flex items-center justify-between">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                    Update
+                </button>
+            </div>
+        </form>
+    </div>
+</div> 
+
+
+<div [ngClass]="isVisibleAddEditionPopup() ? 'block' : 'hidden'" class="popup bg-black fixed inset-0 bg-gray-800 bg-opacity-75 flex justify-center items-center z-50">
+    <div class="popup-content bg-white p-8 rounded-lg shadow-lg max-w-md w-full relative">
+        <button class="absolute top-2 right-2 text-gray-600 hover:text-gray-900" (click)="closeAddEditionPopup()">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-gray-600">
+                <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
+            </svg>
+        </button>
+        <h2 class="text-2xl font-bold mb-4">Update Survey </h2>
+        <form (ngSubmit)="addEdition(survey.id)">
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="title">Start Date</label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="title" type="date" [(ngModel)]="SurveyEdition.startDate" name="startDate"  required>
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="title">End Date</label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="title" type="date" name="EndDate" [(ngModel)]="SurveyEdition.endDate" required>
+            </div>
+            <div class="mb-4">
+                <label class="block text-gray-700 text-sm font-bold mb-2" for="description">Year</label>
+                <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="description" type="number"  name="description" [(ngModel)]="SurveyEdition.year" required>
+            </div>
+            <div class="flex items-center justify-between">
+                <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
+                    Add survey edition
+                </button>
+            </div>
+        </form>
+    </div>
+</div> 
+
