--- a/src/app/features/survey/update-survey/update-survey.component.html
+++ b/src/app/features/survey/update-survey/update-survey.component.html
@@ -1,12 +1,12 @@
 
 <div class="popup fixed inset-0 bg-gray-800 bg-opacity-75 flex justify-center items-center">
     <div class="popup-content bg-white p-8 rounded-lg shadow-lg max-w-md w-full relative">
-        <button class="absolute top-2 right-2 text-gray-600 hover:text-gray-900" (click)="closePopup()">
+        <button class="absolute top-2 right-2 text-gray-600 hover:text-gray-900" (click)="closeModal()">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-gray-600">
                 <path stroke-linecap="round" stroke-linejoin="round" d="m9.75 9.75 4.5 4.5m0-4.5-4.5 4.5M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
             </svg>
         </button>
-        <h2 class="text-2xl font-bold mb-4">Update Survey</h2>
+        <h2 class="text-2xl font-bold mb-4">Update Survey {{survey.title}}</h2>
         <form (ngSubmit)="updateSurvey()">
             <div class="mb-4">
                 <label class="block text-gray-700 text-sm font-bold mb-2" for="title">Title</label>
